objects/OfficeMax_OfficeDepot_CrossReference__c.object
<CustomObject>
    <fields>
        <fullName>AOPS_Id__c</fullName>
        <formula>text(value(AOPS_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOPS Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPS_Number__c</fullName>
        <label>AOPS Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Transition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Transition</label>
        <referenceTo>Customer_Transition__c</referenceTo>
        <relationshipLabel>OfficeMaxOfficeDepot CrossReference</relationshipLabel>
        <relationshipName>OfficeMaxOfficeDepot_CrossReference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OMX_Key__c</fullName>
        <label>OMX Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Mod1__c</fullName>
        <formula>Customer_Transition__r.Ready_for_Mod1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready for Mod1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Desc__c</fullName>
        <formula>IF(text(Source__c)==&quot;O&quot;, &apos;TOOP&apos;, 
    IF(text(Source__c)==&quot;D&quot;, &apos;Existing Account&apos;, 
    IF(text(Source__c)==&quot;E&quot;, &apos;Existing Account&apos;, 
    IF(text(Source__c)==&quot;N&quot;, &apos;SFDC&apos;, text(Source__c)
    )
    )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transition_status__c</fullName>
        <formula>text(Customer_Transition__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transition status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>OfficeMaxOfficeDepot CrossReference</label>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>OfficeMaxOfficeDepot CrossReference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OfficeMaxOfficeDepot CrossReference</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>